		Added --enable-struct-pack configure flag.
		More warnings fixes.
		Fix mif_draw_string so it does not emit escaped character
		codes.
		Added gtkwave_server to distro but it is not currently in
		automake as it is not ready for use.
3.3.19	03feb11	Added more NULL pointer checking to vcd2fst to prevent
		crashes on malformed files.
		Rewrote support for compressed signal handling.  Currently this
		is for FST only.
		Modified shmidcat to exit on EOF.
		Added sys_fst.c VPI source for NC Verilog and XL.
		Added component typename dumping into sys_fst.c so that NC can
		dump component names.
		Added component type names in gtk2 tree.  Currently the FST
		loader is the only one that will populate this field.
		For 64-bit architectures, doubles are stored in HistEnt fields
		directly to conserve on memory usage.
		Fixed top/bottom pane resizing bug after reload in SST window.
		Fixed crashes in hierarchy search widget for GHW where
		standard, textio, std_logic_1164, etc. were selectable.
		Fixed reload scroll position for bottom TreeView in SST window.
3.3.20	21feb11	Fixed uninitialized mat variable in compress_facility().
		Added --slider-zoom option to gtkwave to enable experimental
		horizontal slider zoom feature (GTK2).
		Fix vcd2fst so it can handle 0 length VCD event variables in
		their declarations (MTI).
3.3.21	28apr11	Fixed crash in LXT2 reader on malformed files.
		Fixed reload crash when -o flag used on non-VCD files.
3.3.22	19may11	Optimize tree build so it can handle large amounts of
		component instantiations (netlists) without undue slowdown.
		gcc -Wformat and -Wformat-security related fixes.
		Update hier_decompress_flagged so it can also decompress into
		its own static buffer in order to speed up temporary usage
		cases.
		Fix FST reader iterator to work better with --begin flag.
		Fixed missing facname decompression for FST files on
		import.
		Added support for user-specified timescale ruler using the
		ruler_origin and ruler_step rc variables.