@@ -215,6 +215,7 @@ WV_MENU_VZDYN,
 WV_MENU_VZDYNE,
 WV_MENU_VFTP,
 WV_MENU_SEP17,
+WV_MENU_RULER,
 WV_MENU_RMRKS,
 WV_MENU_SEP17A,
 WV_MENU_USECOLOR,
